Login and LogOut

--- a/templates/global/base.html
+++ b/templates/global/base.html
@@ -95,8 +95,8 @@
       
         if (logoutLink && logoutForm) {
           logoutLink.addEventListener('click', function (e) {
-            e.preventDefault() // Impede o comportamento padrão do link (não vai para #)
-            logoutForm.submit() // Submete o formulário oculto
+            e.preventDefault()
+            logoutForm.submit()
           })
         }
       })
