--- a/contacts/templates/contacts/contact.html
+++ b/contacts/templates/contacts/contact.html
@@ -21,6 +21,9 @@
         <p>
           <strong>Categoria:</strong> {{ contact.category.name }}
         </p>
+        <p>
+          <strong>Descrição:</strong> {{ contact.description }}
+        </p>
         <div class="contact-actions">
           <a href="#" class="btn-primary edit-btn">Editar Contato</a>
           <a href="#" class="btn-primary delete-btn">Excluir Contato</a>
