--- a/templates/global/registration/login.html
+++ b/templates/global/registration/login.html
@@ -17,7 +17,7 @@
     </form>
     
     <div class="login-links">
-        <p>Ainda não tem uma conta? <a href="#">Crie uma aqui</a></p>
+        <p>Ainda não tem uma conta? <a href={% url "contacts:register" %}>Crie uma aqui</a></p>
         <p><a href="#">Esqueceu sua senha?</a></p>
     </div>
 </div>
